Misc. Lightbox2 fixes (Chrome, wraparound, text size)

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -478,6 +478,10 @@ code {
   }
 }
 
+.lb-data .lb-number {
+  font-size: inherit;
+}
+
 
 /*
  * Header images
